# market-signal-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: backfill.yml  ci.yml  ingest.yml  load.yml
dbt/: dbt_project.yml
dbt/models/gold/: gold_features.sql  schema.yml
dbt/models/silver/: schema.yml  silver_daily_bars.sql  sources.yml
dbt/tests/: assert_rsi_bounds.sql
infra/: main.tf  ml.tf  outputs.tf  postgres.tf  variables.tf
scripts/: run_backfill.py  run_ingest.py  run_load_bronze.py  run_train.py
src/market_signal_pipeline/: __init__.py  config.py
src/market_signal_pipeline/ingest/: alpha_vantage.py  bronze.py  exceptions.py  models.py  yahoo_finance.py
src/market_signal_pipeline/load/: bornze_reader.py  bronze_reader.py  parser.py  postgres_writer.py
src/market_signal_pipeline/model/: __init__.py  trainer.py
tests/: test_run_backfill.py  test_run_ingest.py  test_run_load_bronze.py  test_smoke.py
tests/ingest/: test_alpha_vantage.py  test_bronze.py  test_yahoo_finance.py
tests/load/: test_bronze_reader.py  test_parser.py  test_postgres_writer.py
