[project]
name = "market-signal-pipeline"
version = "0.1.0"
description = "End-to-end market signal pipeline on Azure with dbt, Azure ML, and Terraform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Vidura" }]
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "httpx>=0.27",
  "tenacity>=9.0",
  "azure-storage-blob>=12.24",
  "yfinance>=0.2.40",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
transform = ["dbt-core>=1.8", "dbt-postgres>=1.8"]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pre-commit>=4.0",
  "respx>=0.21",
  "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_signal_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--cov=market_signal_pipeline",
  "--cov-report=term-missing",
]
